--- a/css/style.css
+++ b/css/style.css
@@ -35,6 +35,29 @@ h2 {
   opacity: 0.7;
 }
 
+span {
+  font-family: 'Lemonada', cursive, serif;
+}
+
+#name {
+  font-family: 'Lemonada', cursive, serif;
+  min-width: 100px;
+  border: 1px solid rgb(114, 114, 114);
+  border-radius: 5px;
+  font-size: 35px;
+  color: aquamarine;
+}
+
+#focus {
+  font-family: 'Lemonada', cursive, serif;
+  min-width: 100px;
+  font-weight: bold;
+  border: 1px solid rgb(114, 114, 114);
+  border-radius: 5px;
+  opacity: 1;
+  color: aquamarine;
+}
+
 @media (max-width: 700px) {
   #time {
     font-size: 6rem;
