feat: add qoute fetch

--- a/css/style.css
+++ b/css/style.css
@@ -15,6 +15,15 @@ body {
   color: rgb(59, 39, 83);
 }
 
+.wrapper {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
+  height: 100vh;
+}
+
 .time-container {
   max-width: 1500px;
 }
@@ -22,6 +31,21 @@ body {
 #time {
   font-size: 8rem;
   font-family: 'Lemonada', cursive, serif;
+}
+
+#data {
+  font-size: 3rem;
+  font-family: 'Lemonada', cursive, serif;
+  color: rgb(175, 211, 158);
+}
+
+.day {
+  color: aqua;
+  font-size: 4rem;
+}
+
+.months {
+  color: rgb(253, 218, 122);
 }
 
 h1 {
@@ -56,6 +80,54 @@ span {
   border-radius: 5px;
   opacity: 1;
   color: aquamarine;
+}
+
+.weather-container {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+.city-search {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.city-input {
+  width: 100%;
+  max-width: 200px;
+  border: none;
+  outline: none;
+  padding: 10px;
+  background-color: rgb(18, 56, 56);
+  border-radius: 10px;
+}
+
+input {
+  color: rgb(103, 236, 218);
+}
+
+input::placeholder {
+  color: rgb(103, 236, 218);
+}
+
+.weather-content {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+  flex: 1 1 100%;
+  padding: 20px;
+}
+
+#author {
+  color: rgb(255, 163, 163);
+}
+
+#text {
+  color: antiquewhite;
 }
 
 @media (max-width: 700px) {
