--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,7 @@ body {
   text-align: center;
   height: 100vh;
   color: rgb(59, 39, 83);
+  transition: background-image 1s ease-in-out;
 }
 
 .wrapper {
@@ -22,6 +23,28 @@ body {
   align-items: center;
   width: 100%;
   height: 100vh;
+}
+
+/* Refresh Button */
+.btn {
+  width: 60px;
+  height: 60px;
+  border: 0;
+  background: url('https://www.pngarts.com/files/7/Update-Button-PNG-Image.png');
+  background-size: contain;
+  background-repeat: no-repeat;
+  filter: grayscale(1);
+  margin: 10px 0;
+}
+.btn:hover {
+  filter: grayscale(0.8);
+}
+.btn:active,
+.btn:focus {
+  outline: 0;
+}
+.btn:active {
+  transform: scale(1.02);
 }
 
 .time-container {
