--- a/css/style.css
+++ b/css/style.css
@@ -21,8 +21,14 @@ body {
   flex-direction: column;
   justify-content: space-between;
   align-items: center;
-  width: 100%;
   height: 100vh;
+}
+
+.top-container {
+  display: flex;
+  width: 100%;
+  position: absolute;
+  justify-content: space-between;
 }
 
 /* Refresh Button */
@@ -52,7 +58,10 @@ body {
 }
 
 #time {
-  font-size: 8rem;
+  position: absolute;
+  left: 0;
+  top: 100px;
+  font-size: 6rem;
   font-family: 'Lemonada', cursive, serif;
 }
 
@@ -105,44 +114,52 @@ span {
   color: aquamarine;
 }
 
-.weather-container {
-  display: flex;
-  justify-content: center;
-  flex-direction: column;
+.city {
+  width: 300px;
+  padding: 10px 0;
+  margin: 20px auto;
+  border: 1px solid #ccc;
+  border-radius: 5px;
 }
-
-.city-search {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
+.temperature {
+  font-size: 40px;
+  margin-bottom: 20px;
 }
-
-.city-input {
-  width: 100%;
-  max-width: 200px;
-  border: none;
-  outline: none;
-  padding: 10px;
-  background-color: rgb(18, 56, 56);
-  border-radius: 10px;
+.weather-description {
+  width: 200px;
+  height: auto;
+  margin: 10px auto;
+  font-size: 26px;
+  padding: 12px 0;
+  color: #ffffff;
+  border-radius: 5px;
 }
-
-input {
-  color: rgb(103, 236, 218);
+.weather-icon {
+  font-size: 160px;
+  color: #44aadd;
 }
-
-input::placeholder {
-  color: rgb(103, 236, 218);
+.weather-icon:hover {
+  animation: shake 1.5s;
 }
-
-.weather-content {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  text-align: center;
-  flex: 1 1 100%;
-  padding: 20px;
+@keyframes shake {
+  0% {
+    transform: translate(1px, 1px) rotate(0deg);
+  }
+  10% {
+    transform: translate(-1px, -2px) rotate(-1deg);
+  }
+  30% {
+    transform: translate(3px, 2px) rotate(0deg);
+  }
+  50% {
+    transform: translate(-1px, 2px) rotate(-1deg);
+  }
+  70% {
+    transform: translate(3px, 1px) rotate(-1deg);
+  }
+  90% {
+    transform: translate(1px, 2px) rotate(0deg);
+  }
 }
 
 #author {
