--- a/css/style.css
+++ b/css/style.css
@@ -27,6 +27,7 @@ body {
 .top-container {
   display: flex;
   width: 100%;
+  max-height: 150px;
   position: absolute;
   justify-content: space-between;
 }
@@ -121,6 +122,7 @@ span {
   margin: 20px auto;
   border: 1px solid #ccc;
   border-radius: 5px;
+  color: aquamarine;
 }
 .temperature {
   font-size: 40px;
